--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,16 +1,30 @@
 // out: ./main.css
-@import './__colors.less';
-@import './__mixins.less';
+@import './__modules.less';
 
 *,
 *::after,
 *::before {
     box-sizing: border-box;
-    transition: all 0.2s;
+    // transition: all 0.2s;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+html {
+    -ms-overflow-style: none;  /* IE 10+ */
+    scrollbar-width: none; /* Firefox */
+}
+
+html, body {
+    scroll-behavior: smooth;
 }
 
 body {
-    font-family: "PT Sans", sans-serif;
+    font-family: "Yanone Kaffeesatz", sans-serif;
+    color: @brown;
+}
+
+section + section {
+    margin-top: 70px;
 }
 
 a {
@@ -29,236 +43,41 @@ h1, h2, h3, h4, h5, h6, p {
     padding: 0;
 }
 
+img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+input {
+    margin: 0;
+    padding: 0;
+    border: none;
+    outline: none;
+    border-radius: 0;
+    background-color: transparent;
+}
+
+.App {
+    position: relative;
+    background-color: #E5E5E5;
+}
+
 .container {
     padding: 0 120px;
 }
 
-.section {
-    padding-top: 100px;
-}
 .title {
-    margin-bottom: 50px;
+    margin-bottom: 25px;
+    padding-bottom: 5px;
     display: inline-block;
     text-align: center;
-    border-bottom: 2px solid rgba(#000000, 0.25);
-    font-size: 48px;
+    border-bottom: 1px solid rgba(#000000, 0.25);
+    
+    font-family: "PT sans", sans-serif;
+    font-size: 22px;
     color: @brown;
     text-transform: uppercase;
 }
 
-.header {
-    &__top {
-        padding: 20px 0;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-    &__logo {
-        font-size: 48px;
-        font-weight: normal;
-        color: @brown;
-    }
-    &__menu {
-        display: flex;
-        align-items: center;
-        &--list {
-            display: flex;
-        }
-        &--link {
-            margin-right: 30px;
-            color: @brown;
-            text-transform: uppercase;
-        }
-    }
-    &__button {
-        padding: 18px 48px;
-        background-color: #7E9F69;
-        border-radius: 50px;
-        color: #ffffff;
-        cursor: pointer;
-        &:active {
-            transform: scale(0.98);
-        }
-    }
-
-    &__main {
-        height: 700px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        background: #fff url('./../images/main-bg.png') no-repeat center / cover;
-        backdrop-filter: brightness(80%);
-        &--title {
-            margin-top: auto;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            h1 {
-                position: relative;
-                z-index: 10;
-                font-family: "Caveat", sans-serif;
-                font-size: 144px;
-                font-weight: bold;
-                color: @brown;
-                text-transform: uppercase;
-            }
-            p {
-                margin-top: -15px;
-                padding: 10px 50px;
-                display: inline-block;
-                background-color: #fff;
-                text-align: center;
-                text-transform: uppercase;
-                color: @brown;
-                font-size: 24px;
-            }
-        }
-        &--toVariants-btn {
-            display: flex;
-            align-items: center;
-            margin-bottom: -31px;
-            padding: 20px 40px;
-            margin-top: auto;
-            border: 1px solid @brown;
-            border-radius: 50px;
-            background-color: #EFEBE3;
-            color: @brown;
-            font-family: "PT sans", sans-serif;
-            font-size: 18px;
-            font-weight: bold;
-            cursor: pointer;
-            &:active {
-                transform: scale(0.98);
-            }
-            .icon {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                margin-left: 13px;
-                min-width: 10px;
-                min-height: 10px;
-                svg {
-                    width: 17px;
-                    height: 17px;
-                }
-            }
-        }
-    }
-}
-
-.about {
-    .container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-    &__main {
-        width: 100%;
-    }
-    &__block {
-        width: 100%;
-        display: flex;
-        background-color: #EBE7E1;
-        // align-items: center;
-        &--in {
-            padding: 50px 0px 77px 47px;
-            width: 50%;
-        }
-        &--title {
-            margin-bottom: 20px;
-            font-size: 20px;
-            font-weight: 700;
-            text-transform: uppercase;
-            color: @brown;
-        }
-        &--desc {
-            font-size: 18px;
-            color: @brown;
-        }
-        &--image {
-            width: 50%;
-            background: url('../images/about1.png') no-repeat center / cover;
-        }
-    }
-}
-
-.inside {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    .slider {
-        position: relative;
-        .slide {
-            display: flex;
-            background-color: rgba(@brown, 0.5);
-            &__image {
-                img {
-                    min-width: 100%;
-                    min-height: 100%;
-                }
-            }
-            &__in {
-                margin-left: 38px;
-                padding: 77px 0;
-                color: #EFEBE3;
-            }
-            &__title {
-                font-family: "Caveat", sans-serif;
-                font-size: 64px;
-            }
-            &__subtitle {
-                margin-left: 51px;
-                margin-bottom: 50px;
-                font-size: 24px;
-                text-transform: uppercase;
-            }
-            &__text {
-                width: 64%;
-                margin-left: 51px;
-                font-size: 18px;
-            }
-        }
-        &__arrow--left,
-        &__arrow--right {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            cursor: pointer;
-            svg {
-                path {
-                    fill: rgba(#000000, 0.3);
-                }
-            }
-        }
-        &__arrow--left {
-            left: 33px;
-        }
-        &__arrow--right {
-            right: 33px;
-        }
-    }
-}
-
-.variants {
-    &__main {}
-    &__tabs {
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        &--tab {
-            padding: 13px 100px;
-            border-radius: 30px 30px 0 0;
-            background-color: #EFEBE3;
-            font-size: 36px;
-            color: rgba(@brown, 0.5);
-            cursor: pointer;
-            &.active {
-                color: @red;
-            }
-        }
-    }
-}
