--- a/src/components/Order/Order.less
+++ b/src/components/Order/Order.less
@@ -93,6 +93,12 @@
                 font-family: "PT Sans", sans-serif;
                 font-size: 18px;
             }
+            &--select {
+                width: 100%;
+            }
+            &--option {
+                width: 50%;
+            }
             &--checkbox {
                 input {
                     width: 1px;
